# gr-ra_blocks

./: CMakeLists.txt  Makefile  README.md  cmake_uninstall.cmake
apps/: Makefile
docs/: Makefile  README.ra_blocks
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  Makefile  ra_blocks_slicer.xml  ra_blocks_synch_clock.xml  ra_blocks_synch_detect.xml  ra_blocks_synch_folder.xml  ra_blocks_vector_power.xml  ra_fft.xml  ra_synch_folder2.xml  ra_vector_normalize.xml
include/ra_blocks/: CMakeLists.txt  Makefile  api.h  slicer.h  synch_clock.h  synch_detect.h  synch_folder.h  vector_power.h
lib/: CMakeLists.txt  CTestTestfile.cmake  Makefile  qa_ra_blocks.cc  qa_ra_blocks.h  slicer_impl.cc  slicer_impl.h  synch_clock_impl.cc  synch_clock_impl.h  synch_detect_impl.cc  synch_detect_impl.h  synch_folder_impl.cc  synch_folder_impl.h  test-ra_blocks  test_ra_blocks.cc  test_ra_blocks_test.sh  vector_power_impl.cc  vector_power_impl.h
python/: CMakeLists.txt  Makefile  __init__.py  ra_fft.py  ra_fft.pyo  ra_synch_folder2.py  ra_vector_normalize.py
swig/: CMakeLists.txt  Makefile  _ra_blocks_swig_doc_tag  _ra_blocks_swig_swig_tag  ra_blocks_swig.i  ra_blocks_swig.py  ra_blocks_swig.pyo  ra_blocks_swigPYTHON_wrap.cxx
swig/ra_blocks_swig_doc_swig_docs/xml/: api_8h.xml  classgr_1_1ra__blocks_1_1slicer.xml  classgr_1_1ra__blocks_1_1synch__clock.xml  classgr_1_1ra__blocks_1_1synch__detect.xml  classgr_1_1ra__blocks_1_1synch__folder.xml  classgr_1_1ra__blocks_1_1vector__power.xml  dir_6d38b172b3df04d637cd9fba9c0a6a46.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml  namespacegr.xml  namespacegr_1_1ra__blocks.xml  slicer_8h.xml  synch__clock_8h.xml  synch__detect_8h.xml  synch__folder_8h.xml  vector__power_8h.xml
